Library/AXL(Library)/C#/AXA.cs

/****************************************************************************
*****************************************************************************
**
** File Name
** ----------
**
** AXA.CS
**
** COPYRIGHT (c) AJINEXTEK Co., LTD
**
*****************************************************************************
*****************************************************************************
**
** Description
** -----------
** Ajinextek Analog Library Header File
** 
**
*****************************************************************************
*****************************************************************************
**
** Source Change Indices
** ---------------------
** 
** (None)
**
**
*****************************************************************************
*****************************************************************************
**
** Website
** ---------------------
**
** http://www.ajinextek.com
**
*****************************************************************************
*****************************************************************************
*/


using System;
using System.Runtime.InteropServices;

public class CAXA
{
//========== Board and verification API group of module information =================================================================================
//Verify if AIO module exists
[DllImport("AXL.dll")] public static extern uint AxaInfoIsAIOModule(ref uint upStatus);


//Verify AIO module number
[DllImport("AXL.dll")] public static extern uint AxaInfoGetModuleNo(int lBoardNo, int lModulePos, ref int lpModuleNo);


//Verify the number of AIO module
[DllImport("AXL.dll")] public static extern uint AxaInfoGetModuleCount(ref int lpModuleCount);


//Verify the number of input channels of specified module
[DllImport("AXL.dll")] public static extern uint AxaInfoGetInputCount(int lModuleNo, ref int lpCount);


//Verify the number of output channels of specified module
[DllImport("AXL.dll")] public static extern uint AxaInfoGetOutputCount(int lModuleNo, ref int lpCount);


//Verify the first channel number of specified module
[DllImport("AXL.dll")] public static extern uint AxaInfoGetChannelNoOfModuleNo(int lModuleNo, ref int lpChannelNo);


// Verify the first Input channel number of specified module (Inputmodule, Integration for input/output Module)
[DllImport("AXL.dll")] public static extern uint AxaInfoGetChannelNoAdcOfModuleNo(int lModuleNo, ref int lpChannelNo);


// Verify the first output channel number of specified module (Inputmodule, Integration for input/output Module)
[DllImport("AXL.dll")] public static extern uint AxaInfoGetChannelNoDacOfModuleNo(int lModuleNo, ref int lpChannelNo);


//Verify base board number, module position and module ID with specified module number
[DllImport("AXL.dll")] public static extern uint AxaInfoGetModule(int lModuleNo, ref int lpBoardNo, ref int lpModulePos, ref uint upModuleID);

// Verify specified module board : Sub ID, module name, module description
//===============================================/
// support product : EtherCAT
// upModuleSubID   : EtherCAT SubID(for distinguish between EtherCAT modules)
// szModuleName         : model name of module(50 Bytes)
// szModuleDescription  : description of module(80 Bytes)
//======================================================//

//Verify Module status of specified module board
[DllImport("AXL.dll")] public static extern uint AxaInfoGetModuleEx(int lModuleNo, ref uint upModuleSubID, System.Text.StringBuilder szModuleName, System.Text.StringBuilder szModuleDescription);


[DllImport("AXL.dll")] public static extern uint AxaInfoGetModuleStatus(int lModuleNo);


//========== API group of input module information search ====================================================================================
//Verify module number with specified input channel number
[DllImport("AXL.dll")] public static extern uint AxaiInfoGetModuleNoOfChannelNo(int lChannelNo, ref int lpModuleNo);


//Verify the number of entire channels of analog input module
[DllImport("AXL.dll")] public static extern uint AxaiInfoGetChannelCount(ref int lpChannelCount);


//========== API group for setting and verifying of input module interrupt ============================================================
//Use window message, callback API or event method in order to get event message into specified channel. Use for the time of collection action( refer AxaStartMultiChannelAdc ) of continuous data by H/W timer
//(Timer Trigger Mode, External Trigger Mode)
//Use Windows message and callback function or event method to receive an interrupt message to the specified module.
//========= Interrupt-related function ======================================================================================
//The callback function method has the advantage that the event can be notified very quickly because the callback function is called immediately at the time of the occurrence of the event.
//But, The main process is stalled until the callback function is completely terminated.
//In other words, Care must be taken when there is work load in the callback function.
//The event method is a method of continuously detecting and processing the occurrence of an interrupt by using a thread.
//The event method has the disadvantage that system resources are occupied by thread, but it has the advantage that interrupts can be detected and processed the fastest.
//This method is not commonly used. but it is used when quick interrupt handling is main concern.
//The event method uses a specific thread to monitor the occurrence of an event, and it works independently of the main process.
//So, This is the recommended method because it enables the most efficient use of resources in a multiprocessor system.
//Use a Window message or callback function to receive interrupt message.
//(Message handle, Message ID, Callback function, Interrupt event)
//    hWnd        : Used to receive window handles and window messages. If not, enter NULL.
//    uMessage    : Massage of window handle. To not use this or use the default value, enter 0.
//    proc        : Pointer of the function to be called when an interrupt occurs. To not use this, enter NULL.
//    pEvent      : Event handling when using event method.
[DllImport("AXL.dll")] public static extern uint AxaiEventSetChannel(int lModuleNo, IntPtr hWnd, uint uMessage, CAXHS.AXT_INTERRUPT_PROC pProc, ref uint pEvent);


//Set whether to use event in specified input channel
//======================================================//
// uUse       : DISABLE(0)    // Event Disable
//            : ENABLE(1)     // Event Enable
//======================================================//
[DllImport("AXL.dll")] public static extern uint AxaiEventSetChannelEnable(int lChannelNo, uint uUse);


//Verify whether to use event in specified input channel
//======================================================//
// *upUse     : DISABLE(0)    // Event Disable
//            : ENABLE(1)     // Event Enable
//======================================================//
[DllImport("AXL.dll")] public static extern uint AxaiEventGetChannelEnable(int lChannelNo, ref uint upUse);


//Set whether to use event in specified multiple input channels
//======================================================//
//lSize       : Number of input channel
// uUse       : DISABLE(0)    // Event Disable
//            : ENABLE(1)     // Event Enable
//======================================================//
[DllImport("AXL.dll")] public static extern uint AxaiEventSetMultiChannelEnable(int lSize, int[] lpChannelNo, uint uUse);


//Set kind of event in specified input channel
//======================================================//
// uMask      : DATA_EMPTY(1)
//            : DATA_MANY(2)
//            : DATA_SMALL(3)
//            : DATA_FULL(4)
//======================================================//
[DllImport("AXL.dll")] public static extern uint AxaiEventSetChannelMask(int lChannelNo, uint uMask);


//Verify kind of event in specified input channel
//======================================================//
// *upMask    : DATA_EMPTY(1)
//            : DATA_MANY(2)
//            : DATA_SMALL(3)
//            : DATA_FULL(4)
//======================================================//
[DllImport("AXL.dll")] public static extern uint AxaiEventGetChannelMask(int lChannelNo, ref uint upMask);


//Set kind of event in specified multiple input channels
//==============================================================================//
// uMask      : DATA_EMPTY(1)
//            : DATA_MANY(2)
//            : DATA_SMALL(3)
//            : DATA_FULL(4)
//==============================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiEventSetMultiChannelMask(int lSize, int[] lpChannelNo, uint uMask);


//Verify event occurrence position
//==============================================================================//
// *upMode    : AIO_EVENT_DATA_UPPER(1)
//            : AIO_EVENT_DATA_LOWER(2)
//            : AIO_EVENT_DATA_FULL(3)
//            : AIO_EVENT_DATA_EMPTY(4)
//==============================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiEventRead(ref int lpChannelNo, ref uint upMode);


//Set interrupt mask of specified module. (SIO-AI4RB is not supportive.)
//==================================================================================================//
// uMask    : SCAN_END(1)
//          : FIFO_HALF_FULL(2)
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiInterruptSetModuleMask(int lModuleNo, uint uMask);


//Verify interrupt mask of specified module
//==================================================================================================//
// *upMask  : SCAN_END(1)
//          : FIFO_HALF_FULL(2)
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiInterruptGetModuleMask(int lModuleNo, ref uint upMask);


//========== API group for setting and verifying of input module parameter ========================================================================
//Set the input voltage range in specified input channel
//==================================================================================================//
// dMinVolt : -10V Fix
// dMaxVolt : 10V Fix
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiSetRange(int lChannelNo, double dMinVolt, double dMaxVolt);


//Verify the input voltage range in specified input channel
//==================================================================================================//
// *dpMaxVolt : -10V Fix
// *dpMaxVolt : 10V Fix
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiGetRange(int lChannelNo, ref double dpMinVolt, ref double dpMaxVolt);


//Set the allowed input voltage range in specified multiple input Modules
//==================================================================================================//
// lModuleNo   : Analog Module Number
//
// RTEX AI16F
// Mode -5~+5  : dMinVolt = -5, dMaxVolt = +5
// Mode -10~+10: dMinVolt = -10, dMaxVolt = +10
//==================================================================================================//
[DllImport("AXL.dll")] public static extern uint AxaiSetRangeModule(int lModuleNo, double dMinVolt, double dMaxVolt);

